--- a/web/index.html
+++ b/web/index.html
@@ -1,3 +1,21 @@
+
+<!-- saved from url=(0039)https://kb003.config.interface.systems/ -->
 <html>
-  test
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+        <title>nPicoKeyboard Config Page</title>
+        <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap" rel="stylesheet"> -->
+        <script src="js/util.js"></script>
+        <script src="js/codes.js"></script>
+        <script src="js/keyselector.js"></script>
+        <script src="js/keyboard.js"></script>
+        <script src="js/serial.js"></script>
+        <script src="js/usb.js"></script>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+        <script>
+            var k = new Keyboard();
+        </script>
+    </body>
 </html>
