Changes to be committed: 	modified:   keyboard.h 	modified:   main.c 	modified:   web/css/style.css 	modified:   web/index.html 	modified:   web/js/keyboard.js

--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0039)https://kb003.config.interface.systems/ -->
 <html>
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+        <meta http-equiv="Content-Type" content="text/html;">
         <title>nPicoKeyboard Config Page</title>
         <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap" rel="stylesheet"> -->
         <script src="js/util.js"></script>
